Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,13 +293,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_values = list(x_values)\n",
-    "t\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "text_values\n",
+    "#bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
    ]
   },
   {
