--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,7 @@
    "source": [
     "text_values = list(x_values)\n",
     "text_values\n",
-    "#bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
    ]
   },
   {
