--- a/index.ipynb
+++ b/index.ipynb
@@ -293,24 +293,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Buenos Aires', 'Toronto', 'Pyeongchang']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "text_values = list(x_values)\n",
     "text_values\n",
-    "#bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
    ]
   },
   {
