--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
     }
    ],
    "source": [
-    "bar_trace_first_three_pops['bar']"
+    "bar_trace_first_three_pops[''bar'']"
    ]
   },
   {
