Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,15 +293,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'scatter', 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_values = list(x_values)\n",
     "text_values\n",
     "\n",
     "\n",
-    "3bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}\n",
+    "bar_trace_first_three_pops"
    ]
   },
   {
