--- a/index.ipynb
+++ b/index.ipynb
@@ -318,11 +318,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'bar', 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bar_trace_first_three_pops['type'] = 'bar'"
+    "bar_trace_first_three_pops['type'] = 'bar'\n",
+    "bar_trace_first_three_pops"
    ]
   },
   {
