--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,7 @@
     "text_values\n",
     "\n",
     "\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}\n",
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x' : x_values, 'y''text': text_values}\n",
     "bar_trace_first_three_pops"
    ]
   },
