--- a/index.ipynb
+++ b/index.ipynb
@@ -293,16 +293,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'type': 'scatter', 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}"
+       "{'type': 'scatter',\n",
+       " 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
+       " 'y': [2891000, 2800000, 2581000],\n",
+       " 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,22 +315,25 @@
     "text_values\n",
     "\n",
     "\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x' : x_values, 'y''text': text_values}\n",
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x' : x_values, 'y': y_values, 'text': text_values}\n",
     "bar_trace_first_three_pops"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'type': 'bar', 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}"
+       "{'type': 'bar',\n",
+       " 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
+       " 'y': [2891000, 2800000, 2581000],\n",
+       " 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
