--- a/index.ipynb
+++ b/index.ipynb
@@ -409,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_values_areas = [cities[0]['Area'], cities[1]['Area'], cities]\n",
+    "y_values_areas = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
    ]
