--- a/index.ipynb
+++ b/index.ipynb
@@ -422,8 +422,8 @@
    "source": [
     "y_values_areas = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "y_values_areas\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': y_values_areas, 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': y_values_areas, 'text': text_values}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': [], 'text': []}"
    ]
   },
   {
