Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,19 +405,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_values_areas = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "y_values_areas\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': y_values_areas, 'text': text_values}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values, 'y': y_values_areas, 'text': text_values}\n",
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -430,8 +430,8 @@
           "Toronto",
           "Pyeongchang"
          ],
-         "type": "bar",
-         "uid": "06022204-2193-11e9-a38e-15276ff2aa1a",
+         "type": "scatter",
+         "uid": "248e33e8-2193-11e9-a38e-15276ff2aa1a",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -449,8 +449,8 @@
           "Toronto",
           "Pyeongchang"
          ],
-         "type": "bar",
-         "uid": "06022876-2193-11e9-a38e-15276ff2aa1a",
+         "type": "scatter",
+         "uid": "248e35f0-2193-11e9-a38e-15276ff2aa1a",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -466,10 +466,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"5e231c8b-4b25-4c78-9cf7-d5177dd232a7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5e231c8b-4b25-4c78-9cf7-d5177dd232a7\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"060692d0-2193-11e9-a38e-15276ff2aa1a\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"06069460-2193-11e9-a38e-15276ff2aa1a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"a89d6907-eb63-4342-8d1d-6133794e9225\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a89d6907-eb63-4342-8d1d-6133794e9225\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"2492f0f4-2193-11e9-a38e-15276ff2aa1a\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"scatter\", \"uid\": \"2492f2fc-2193-11e9-a38e-15276ff2aa1a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"5e231c8b-4b25-4c78-9cf7-d5177dd232a7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5e231c8b-4b25-4c78-9cf7-d5177dd232a7\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"060692d0-2193-11e9-a38e-15276ff2aa1a\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"06069460-2193-11e9-a38e-15276ff2aa1a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"a89d6907-eb63-4342-8d1d-6133794e9225\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a89d6907-eb63-4342-8d1d-6133794e9225\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"2492f0f4-2193-11e9-a38e-15276ff2aa1a\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"scatter\", \"uid\": \"2492f2fc-2193-11e9-a38e-15276ff2aa1a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
