--- a/index.ipynb
+++ b/index.ipynb
@@ -405,14 +405,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4758, 2731571, 3194]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_values_areas = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "y_values_areas\n",
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values, 'y': y_values_areas, 'text': text_values}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': text_values}"
+    "#bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values, 'y': y_values_areas, 'text': text_values}\n",
+    "#bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
   {
